--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
+    "axios": "^1.7.2",
+    "jotai": "^2.8.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
