--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "arrowParens": "always",
-  "semi": false
+  "semi": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
