--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
