--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,14 +27,18 @@
       { "endOfLine": "auto" },
       { "usePrettierrc": true }
     ],
+    "no-console": 1,
+    "react-hooks/exhaustive-deps": 0,
+    "no-unused-vars": "off",
+    "arrow-body-style": "off",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react/display-name": "off",
-    "no-unused-vars": "off",
+    "no-unused-expression": 0,
     "@typescript-eslint/no-var-requires": 0,
-    "@typescript-eslint/no-unused-vars": ["error"],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn"
   }
 }
+
