Chore: dashboardid 단어 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["signup", "tailwindcss", "tanstack", "taskify"]
+  "cSpell.words": [
+    "dashboardid",
+    "signup",
+    "tailwindcss",
+    "tanstack",
+    "taskify"
+  ]
 }
