--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "eslint": "^9.5.0",
     "jotai": "^2.8.3",
     "next": "14.2.4",
