--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"], //컴파일러가 포함해야 할 파일들
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Modal/index.js"], //컴파일러가 포함해야 할 파일들
   "exclude": ["node_modules"] //컴파일러가 무시할 파일들
 }
