--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-svg": "^16.1.34"
+    "react-svg": "^16.1.34",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
