--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "eslint": "^9.5.0",
     "jotai": "^2.8.3",
     "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18",
     "react-svg": "^16.1.34"
   },
